--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     {% if number_odd_or_even is divisibleby 2 %}
-    <h1>Number: {{ number_odd_or_even }} is even</h1>
+    <h1>Number: {{ n }} is even</h1>
     {% else %}
-    <h1>Number: {{ number_odd_or_even }} is odd</h1>
+    <h1>Number: {{ n }} is odd</h1>
     {% endif %}
 </body>
 </html>
