--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -4,6 +4,6 @@
     <title>HBNB</title>
   </head>
   <body>
-    <h1>Number: {{ number_template }}</h1>
+    <h1>Number: {{ n }}</h1>
   </body>
 </html>
