--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,7 +4,7 @@
   <title>HBNB</title>
 </head>
 <body>
-    {% if number_odd_or_even is divisibleby 2 %}
+    {% if n is divisibleby 2 %}
     <h1>Number: {{ n }} is even</h1>
     {% else %}
     <h1>Number: {{ n }} is odd</h1>
