--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,11 +4,11 @@
         <title>HBNB</title>
     </head>
     <body>
-	{% if state %}
-	<h1>State: {{ state.name }}</h1>
+	{% if send %}
+	<h1>State: {{ send.name }}</h1>
         <h3>Cities:</h3>
         <ul>
-		{% for city in state.cities|sort(attribute='name')%}
+		{% for city in send.cities|sort(attribute='name')%}
 			<li>{{city.id}}: <b>{{city.name}}</b></li>
 		{% endfor %}
         </ul>
